# IKV-LimitLess

./: README.md  launcher_bypass.cs  update.json
ikv_spoofer/: Cargo.toml
ikv_spoofer/src/: captcha.rs  lib.rs  ocr_macro.rs
ikvlimitless-tauri/: README.md  index.html  package-lock.json  package.json  vite.config.js
ikvlimitless-tauri/capabilities/: default.json
ikvlimitless-tauri/src/: App.css  App.jsx  index.css  main.jsx
ikvlimitless-tauri/src-tauri/: Cargo.toml  tauri.conf.json
ikvlimitless-tauri/src-tauri/capabilities/: default.json
ikvlimitless-tauri/src-tauri/src/: commands.rs  crypto.rs  db.rs  inspector.rs  main.rs  models.rs  window_utils.rs
ikvlimitless-tauri/src/components/: AccountForm.jsx  AccountList.jsx  AnimatedBackground.jsx  SettingsPanel.jsx  WaveBackground.jsx
ikvlimitless-tauri/src/pages/: Dashboard.jsx
ikvlimitless-tauri/src/utils/: modal.js  theme.js
