[package]
name = "ikvlimitless"
version = "1.2.2"
description = "LimitLess Auto Login Tool"
authors = ["LimitLess"]
edition = "2021"
rust-version = "1.60"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11.0", features = ["v4"] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
reqwest = { version = "0.11.18", features = ["cookies", "json"] }
base64 = "0.22.1"
regex = "1.9.6"
winapi = { version = "0.3.9", features = ["minwindef", "winnt", "memoryapi", "processthreadsapi", "handleapi", "errhandlingapi", "libloaderapi", "synchapi", "winbase", "psapi", "winuser", "windef", "wingdi"] }
jsonwebtoken = "8.3.0"
aes-gcm = "0.10.3"
sha2 = "0.10.9"
rand = "0.8.6"


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true




